docs/apache-airflow-providers-amazon/8.2.0/_sources/_api/airflow/providers/amazon/aws/triggers/s3/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.triggers.s3`
==================================================

.. py:module:: airflow.providers.amazon.aws.triggers.s3


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.triggers.s3.S3KeyTrigger




.. py:class:: S3KeyTrigger(bucket_name, bucket_key, wildcard_match = False, aws_conn_id = 'aws_default', poke_interval = 5.0, should_check_fn = False, **hook_params)


   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`

   S3KeyTrigger is fired as deferred class with params to run the task in trigger worker.

   :param bucket_name: Name of the S3 bucket. Only needed when ``bucket_key``
       is not provided as a full s3:// url.
   :param bucket_key:  The key being waited on. Supports full s3:// style url
       or relative path from root level. When it's specified as a full s3://
       url, please leave bucket_name as `None`.
   :param wildcard_match: whether the bucket_key should be interpreted as a
       Unix wildcard pattern
   :param aws_conn_id: reference to the s3 connection
   :param hook_params: params for hook its optional

   .. py:method:: serialize()

      Serialize S3KeyTrigger arguments and classpath.


   .. py:method:: hook()


   .. py:method:: run()
      :async:

      Make an asynchronous connection using S3HookAsync.



